--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <title>My Services</title>
     <link rel="stylesheet" href="style.css">
 </head>
+  <footer>
+  GpopzRaw © 2025. All rights reserved.
+  <button onclick="toggleTheme()" class="theme-toggle">Toggle Theme</button>
+</footer>
+<script src="script.js"></script>
+
 <body>
     <header>
         <h1>Welcome to My Services</h1>
