--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>GpopzRaw - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>GpopzRaw — Where Innovation Lives</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+<body class="dark-theme">
+
+  <!-- Navigation -->
   <header class="navbar">
     <img src="images/logo.png" alt="GpopzRaw Logo" class="logo" />
     <nav>
@@ -21,16 +23,85 @@
     <button onclick="toggleTheme()" class="theme-toggle">Toggle Theme</button>
   </header>
 
-  <main class="hero">
-    <section class="intro">
-      <img src="images/me.jpg" alt="Haroon" class="profile-pic" />
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <img src="images/me.jpg" alt="Haroon Ahmad Amin" class="profile-pic" />
       <h1>Welcome to GpopzRaw</h1>
-      <p>Your trusted source for cutting-edge tech, development, and digital innovation.</p>
-    </section>
-  </main>
+      <p>I’m Haroon Ahmad Amin — a creator, innovator, and builder of digital dreams.</p>
+    </div>
+  </section>
 
-  <footer>
+  <!-- What I Do Section -->
+  <section class="intro-section">
+    <h2>What I Do</h2>
+    <p>
+      At GpopzRaw, I offer full-stack development, AI-integrated web apps, educational content creation,
+      cybersecurity insights, and creative tech solutions tailored for impact.
+    </p>
+  </section>
+
+  <!-- Services Grid -->
+  <section class="services">
+    <h2>Featured Services</h2>
+    <div class="service-grid">
+      <div class="service-card">
+        <h3>💻 Full-Stack Web Development</h3>
+        <p>Build fast, scalable, and secure websites and applications from scratch.</p>
+      </div>
+      <div class="service-card">
+        <h3>🤖 AI & Automation Tools</h3>
+        <p>Create smart tools and workflows using artificial intelligence and machine learning.</p>
+      </div>
+      <div class="service-card">
+        <h3>🎓 Educational Platform & Tutorials</h3>
+        <p>Teach coding, cybersecurity, and innovation through engaging content and workshops.</p>
+      </div>
+      <div class="service-card">
+        <h3>🔐 Cybersecurity Guidance</h3>
+        <p>Helping individuals and businesses protect their digital assets and data.</p>
+      </div>
+      <div class="service-card">
+        <h3>🎙️ Podcasting & Digital Media</h3>
+        <p>Covering tech, culture, and future trends through storytelling and interviews.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Me Section -->
+  <section class="about-me">
+    <h2>About Me</h2>
+    <div class="about-content">
+      <img src="images/me.jpg" alt="Haroon Ahmad Amin" class="bio-pic" />
+      <div class="bio-text">
+        <p>
+          Hello! I'm Haroon Ahmad Amin — a passionate developer, educator, and digital creator.
+          I love building things that make life easier and more interesting. Whether it's crafting powerful web apps,
+          exploring AI, or sharing knowledge through tutorials, I'm always excited to learn and grow.
+        </p>
+        <p>
+          My journey started with curiosity, grew through experience, and continues to evolve with every new project.
+          Check out my <a href="about.html">full story</a> if you'd like to know more.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials or Highlights (Optional) -->
+  <section class="highlights">
+    <blockquote>
+      "Haroon brings creativity and precision to every project — a rare combination."
+    </blockquote>
+  </section>
+
+  <!-- Footer -->
+  <footer class="site-footer">
     <p>GpopzRaw © 2025. All rights reserved.</p>
+    <div class="social-links">
+      <a href="#">GitHub</a> | 
+      <a href="#">YouTube</a> | 
+      <a href="#">Twitter</a>
+    </div>
   </footer>
 
   <script src="script.js"></script>
