--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,161 @@
-<nav>
-  <ul style="list-style: none; display: flex; gap: 15px;">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="services.html">Services</a></li>
-    <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
-<hr />
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>GpopzRaw - Contact</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
-  <header>
-    <h1>Contact Me</h1>
+<body class="light-theme">
+
+  <!-- Navigation -->
+  <header class="navbar">
+    <img src="images/logo.png" alt="GpopzRaw Logo" class="logo" />
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="services.html">Services</a>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
     </nav>
+    <button onclick="toggleTheme()" class="theme-toggle">☀️ Toggle Theme</button>
   </header>
-  <section>
-    <h2>Let's Work Together!</h2>
-    <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    <p>Phone: +234 812 345 6789</p>
+
+  <!-- Hero Section -->
+  <section class="hero about-hero">
+    <div class="hero-content center-text">
+      <h1>Get in Touch</h1>
+      <p>I'm open to collaborations, freelance work, or just a friendly chat about tech and innovation.</p>
+    </div>
   </section>
-  <footer>
-    <p>© 2025 Haroon's Services</p>
+
+  <!-- Contact Info & Form -->
+  <section class="contact-section">
+    <div class="contact-container">
+      
+      <!-- Left: Contact Info -->
+      <div class="contact-info">
+        <h2>Contact Information</h2>
+        <p>If you'd like to get in touch, feel free to reach out via any of the methods below.</p>
+
+        <ul class="contact-list">
+          <li>📍 <strong>Location:</strong> No.8 Karewa Maskare, Karewa Ward, Yola-Jimeta, Adamawa State, Nigeria</li>
+          <li>📞 <strong>Phone:</strong> <a href="tel:+2347088886028">07088886028</a></li>
+          <li>💬 <strong>WhatsApp:</strong> <a href="https://wa.me/2347088886028"  target="_blank">Chat me on WhatsApp</a></li>
+          <li>✉️ <strong>Email:</strong> <a href="mailto:haroon@bluesapphire.com.ng">haroon@bluesapphire.com.ng</a></li>
+          <li>🌐 <strong>Social:</strong>
+            <div class="social-icons">
+              <a href="https://github.com/gpopzraw9"  target="_blank">GitHub</a> | 
+              <a href="#" target="_blank">LinkedIn</a> | 
+              <a href="#" target="_blank">YouTube</a> | 
+              <a href="#" target="_blank">Twitter/X</a>
+            </div>
+          </li>
+          <li>🕒 <strong>Working Hours:</strong> Mon-Fri 9AM – 7PM WAT</li>
+        </ul>
+
+        <!-- Google Map -->
+        <div class="map-container">
+          <iframe 
+            src="https://www.google.com/maps?q=No.8%20Karewa%20Maskare%2C%20Karewa%20Ward%2C%20Yola-Jimeta%2C%20Adamawa%20State%2C%20Nigeria&output=embed"
+            width="100%" 
+            height="300" 
+            frameborder="0" 
+            style="border:0;" 
+            allowfullscreen="" 
+            aria-hidden="false" 
+            tabindex="0">
+          </iframe>
+        </div>
+      </div>
+
+      <!-- Right: Contact Form -->
+      <div class="contact-form">
+        <h2>Send Me a Message</h2>
+        <form id="contactForm">
+          <label for="name">Your Name</label>
+          <input type="text" id="name" name="name" required />
+
+          <label for="email">Your Email</label>
+          <input type="email" id="email" name="email" required />
+
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+
+          <button type="submit" class="btn-primary">Send Message</button>
+          <p id="formStatus" style="margin-top: 1rem; color: green;"></p>
+        </form>
+      </div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <section class="cta-section">
+    <h2>Let's Connect!</h2>
+    <p>Whether it's a project, question, or just to say hello — I'd love to hear from you.</p>
+  </section>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <p>GpopzRaw © 2025. All rights reserved.</p>
+    <div class="social-links">
+      <a href="#">GitHub</a> |  
+      <a href="#">YouTube</a> | 
+      <a href="#">Twitter</a>
+    </div>
+    <button onclick="toggleTheme()" class="theme-toggle-footer">☀️</button>
   </footer>
+
+  <!-- AI Chatbot Button -->
+  <div class="chatbot-button" onclick="openChatbot()">
+    💬 Chat with AI
+  </div>
+
+  <!-- Placeholder Chatbot Modal -->
+  <div id="chatbotModal" class="chatbot-modal">
+    <div class="chatbot-header">
+      <span>🤖 GpopzBot</span>
+      <button onclick="closeChatbot()">✕</button>
+    </div>
+    <div class="chatbot-body">
+      <p>Hello! I'm your GpopzBot assistant. Ask me anything about Haroon, his services, or technology!</p>
+      <input type="text" placeholder="Type your question..." onkeypress="handleKeyPress(event)" />
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </div>
+
+  <!-- EmailJS Script -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script> 
+  <script type="text/javascript">
+    // Initialize EmailJS with your service ID, template ID, and Public Key
+    emailjs.init("YOUR_PUBLIC_KEY"); // Replace with your actual public key
+
+    document.getElementById('contactForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const message = document.getElementById('message').value;
+
+      // Send email using EmailJS
+      emailjs.send("service_abc123", "template_xyz789", { // Replace with your own service and template IDs
+        from_name: name,
+        from_email: email,
+        message_html: message,
+      })
+      .then(function(response) {
+        document.getElementById('formStatus').textContent = "Message sent successfully!";
+        document.getElementById('contactForm').reset();
+      })
+      .catch(function(error) {
+        document.getElementById('formStatus').textContent = "Failed to send message.";
+        console.log("Error:", error);
+      });
+    });
+  </script>
+
+  <script src="script.js"></script>
 </body>
 </html>
