--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </div>
   </section>
 
-  <!-- What I Do -->
+  <!-- What We Do -->
   <section class="intro-section">
-    <h2>What I Do</h2>
+    <h2>What We Do</h2>
     <p>
-      At GpopzRaw, I offer full-stack development, AI-integrated web apps, educational content creation,
+      At GpopzRaw, we offer full-stack development, AI-integrated web apps, educational content creation,
       cybersecurity insights, and creative tech solutions tailored for impact.
     </p>
   </section>
@@ -72,9 +72,13 @@
       <img src="images/me.jpg" alt="Haroon Portrait" class="bio-pic" />
       <p>
         I’m Haroon, a self-taught developer, educator, and tech enthusiast passionate about building things that matter.
-        From coding to creating content, I enjoy solving problems, sharing knowledge, and pushing the boundaries of what’s possible.
+        My journey began with curiosity and a love for problem-solving. Over the years, I’ve worked on diverse projects ranging from small personal websites to large-scale applications.
         <br><br>
-        My journey started with curiosity, and now I'm dedicated to helping others learn, grow, and innovate in this ever-evolving digital world.
+        I believe in the power of technology to create positive change, whether it’s through education, innovation, or solving real-world problems.
+        <br><br>
+        Beyond coding, I enjoy sharing my knowledge through tutorials, podcasts, and community events. My goal is to inspire others to explore the possibilities of technology and build their own digital creations.
+        <br><br>
+        Let’s connect and collaborate to bring your ideas to life!
         <a href="about.html">Read more →</a>
       </p>
     </div>
