--- a/web-development.html
+++ b/web-development.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Web Development - GpopzRaw</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body class="light-theme">
 
+  <!-- Navigation -->
+  <header class="navbar">
+    <img src="images/logo.png" alt="GpopzRaw Logo" class="logo" />
+    <nav>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <button onclick="toggleTheme()" class="theme-toggle">🌙 Toggle Theme</button>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero about-hero">
+    <div class="hero-content center-text">
+      <h1>💻 Full-Stack Web Development</h1>
+      <p>Modern, scalable, and responsive websites and applications built with the latest tools and frameworks.</p>
+    </div>
+  </section>
+
+  <!-- Page Content -->
+  <section class="page-content" style="padding: 2rem;">
+    <p>
+      At GpopzRaw, we specialize in building powerful, fast, and secure websites that scale with your business.
+      From frontend design to backend development, we deliver full-stack solutions tailored to your needs.
+    </p>
+    <!-- You can add images, code snippets, or videos here later -->
+  </section>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <p>GpopzRaw © 2025. All rights reserved.</p>
+    <button onclick="toggleTheme()" class="theme-toggle-footer">☀️</button>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
