--- a/web-development.html
+++ b/web-development.html
@@ -33,11 +33,67 @@
 
   <!-- Page Content -->
   <section class="page-content" style="padding: 2rem;">
-    <p>
-      At GpopzRaw, we specialize in building powerful, fast, and secure websites that scale with your business.
-      From frontend design to backend development, we deliver full-stack solutions tailored to your needs.
-    </p>
-    <!-- You can add images, code snippets, or videos here later -->
+    <div class="content-wrapper">
+      <p>
+        At GpopzRaw, we specialize in building powerful, fast, and secure websites that scale with your business.
+        From frontend design to backend development, we deliver full-stack solutions tailored to your needs.
+      </p>
+
+      <h3>Our Tech Stack</h3>
+      <p>We work with modern technologies like:</p>
+      <ul class="tech-list">
+        <li>HTML5 / CSS3 / JavaScript (ES6+)</li>
+        <li>React.js, Vue.js, Angular</li>
+        <li>Node.js, Express.js, Django</li>
+        <li>MongoDB, PostgreSQL, Firebase</li>
+        <li>REST & GraphQL APIs</li>
+      </ul>
+
+      <h3>Featured Project</h3>
+      <p>Check out an example of our recent web development project below:</p>
+
+      <!-- Image Placeholder -->
+      <div class="project-image">
+        <img src="images/web-project.jpg" alt="Web Development Project" />
+      </div>
+
+      <h3>How We Build</h3>
+      <p>
+        Our process ensures clean code, high performance, and seamless user experience:
+      </p>
+      <ol class="process-steps">
+        <li>Understanding client requirements</li>
+        <li>Designing wireframes and UI/UX mockups</li>
+        <li>Frontend development with responsive layouts</li>
+        <li>Backend setup and database integration</li>
+        <li>Testing, deployment, and maintenance</li>
+      </ol>
+
+      <h3>Video Demo</h3>
+      <p>Watch a short demo of one of our projects in action:</p>
+
+      <!-- Video Embed -->
+      <div class="video-container">
+        <iframe width="100%" height="315"
+          src="https://www.youtube.com/embed/YOUR_VIDEO_ID" 
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
+      </div>
+
+      <h3>Gallery</h3>
+      <p>Explore more screenshots from our web development projects:</p>
+
+      <!-- Gallery Section -->
+      <div class="gallery">
+        <img src="images/gallery/web1.jpg" alt="Project 1">
+        <img src="images/gallery/web2.jpg" alt="Project 2">
+        <img src="images/gallery/web3.jpg" alt="Project 3">
+        <img src="images/gallery/web4.jpg" alt="Project 4">
+      </div>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -45,6 +101,24 @@
     <p>GpopzRaw © 2025. All rights reserved.</p>
     <button onclick="toggleTheme()" class="theme-toggle-footer">☀️</button>
   </footer>
+
+  <!-- AI Chatbot Button -->
+  <div class="chatbot-button" onclick="openChatbot()">
+    💬 Chat with AI
+  </div>
+
+  <!-- Placeholder Chatbot Modal -->
+  <div id="chatbotModal" class="chatbot-modal">
+    <div class="chatbot-header">
+      <span>🤖 GpopzBot</span>
+      <button onclick="closeChatbot()">✕</button>
+    </div>
+    <div class="chatbot-body">
+      <p>Hello! I'm your GpopzBot assistant. Ask me anything about Haroon, his services, or technology!</p>
+      <input type="text" placeholder="Type your question..." onkeypress="handleKeyPress(event)" />
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
